# CDP_pico

./: .gitignore  CMakeLists.txt  HowTo.txt  Readme.md  cdp_c_plus_pico.cpp
headers/: Cdp.h  Shapelet.h  ShapeletClassifier.h  Utils.h
src/: Cdp.cpp  ShapeletClassifier.cpp  Utils.cpp
